[project]
name = "vstim-python-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Joscha Schmiedt", email = "schmiedt@uni-bremen.de" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["black>=25.1.0", "ipython>=9.1.0", "mypy>=1.15.0", "pytest>=8.3.5"]
